--- a/public/about.html
+++ b/public/about.html
@@ -307,7 +307,7 @@
                 <div class="footer__content">
                     <h3 class="footer__title">Información</h3>
                     <ul>
-                        <li><a href="#" class="footer__link">Event</a></li>
+                        <li><a href="#" class="footer__link">Eventos Kultinova</a></li>
                         <li><a href="#" class="footer__link">Contacta con nosotros</a></li>
                         <li><a href="#" class="footer__link">Políticas de privacidad</a></li>
                         <li><a href="#" class="footer__link">Términos y Condiciones</a></li>
@@ -318,9 +318,9 @@
                     <h3 class="footer__title">Dirección</h3>
                     <ul class="footer_direction">
                         <li><a href="#" class="footer__link">Colombia - Medellín</a></li>
-                        <li><a href="#" class="footer__link">Robledo Cl. 78b #75-181</a></li>
-                        <li><a href="#" class="footer__link">(+57) 000 000 0000</a></li>
-                        <li><a href="#" class="footer__link">soporte@greenvibes.com</a></li>
+                        <li><a href="#" class="footer__link">Buenos Aires Cra. 27 #45-94</a></li>
+                        <li><a href="#" class="footer__link">(+57) 301 345 7840</a></li>
+                        <li><a href="#" class="footer__link">soporte@kultinova.com</a></li>
                     </ul>
                 </div>
             </div>
