Arreglado error en section

--- a/public/about.html
+++ b/public/about.html
@@ -275,6 +275,34 @@
                             </li>
                         </div>
                     </div>
+                    <div class="team__card">
+                        <img src="/public/assets/img/team3.jpg" alt="Person3" class="team__img">
+                        <h3 class="team__name">Juan Pablo Gaviria</h3>
+                        <span class="team__job">Dueño de la empresa</span>
+                        <p class="team__about">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam magni dolore repellendus obcaecati ipsam error corporis quidem ab fugit.</p>
+                        <div class="team__social">
+                            <li>
+                                <a href="#" class="team__link">
+                                    <i class="ri-facebook-fill"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="team__link">
+                                    <i class="ri-instagram-line"></i>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#" class="team__link">
+                                    <i class="ri-linkedin-fill"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="team__link">
+                                    <i class="ri-whatsapp-line"></i>
+                                </a>
+                            </li>
+                        </div>
                     </div>
                 </div>
             </section>
