Terminado la section Our Mission

--- a/public/about.html
+++ b/public/about.html
@@ -306,6 +306,37 @@
                     </div>
                 </div>
             </section>
+            <!--=============== Our Mission ===============-->
+            <section class="ourmission section container">
+                <h2 class="ourmission__title-section">Nuestra Misión</h2>
+                <div class="ourmission__content">
+                    <div class="ourmission__img">
+                        <img src="/public/assets/img/mission.png" alt="Misión">
+                    </div>
+                    <div class="ourmission__details">
+                        <h3 class="ourmission__title">Misión</h3>
+                        <p class="ourmission__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, corporis sint a ipsum dicta nulla dolor cupiditate! Est itaque cumque at exercitationem eos porro non, officiis cum similique quisquam quis?</p>
+                    </div>
+                </div>
+                <div class="ourmission__content">
+                    <div class="ourmission__img">
+                        <img src="/public/assets/img/eye.png" alt="Visión">
+                    </div>
+                    <div class="ourmission__details">
+                        <h3 class="ourmission__title">Visión</h3>
+                        <p class="ourmission__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, corporis sint a ipsum dicta nulla dolor cupiditate! Est itaque cumque at exercitationem eos porro non, officiis cum similique quisquam quis?</p>
+                    </div>
+                </div>
+                <div class="ourmission__content">
+                    <div class="ourmission__img">
+                        <img src="/public/assets/img/values.png" alt="Valores">
+                    </div>
+                    <div class="ourmission__details">
+                        <h3 class="ourmission__title">Valores</h3>
+                        <p class="ourmission__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, corporis sint a ipsum dicta nulla dolor cupiditate! Est itaque cumque at exercitationem eos porro non, officiis cum similique quisquam quis?</p>
+                    </div>
+                </div>
+            </section>
         </main>
         <!--=============== Footer ===============-->
         <footer class="footer section">
