Cambiadas los avatars del section team

--- a/public/about.html
+++ b/public/about.html
@@ -189,7 +189,7 @@
                 <h2 class="team__title">Nuestro Equipo</h2>
                 <div class="team__container">
                     <div class="team__card">
-                        <img src="/public/assets/img/team1.jpg" alt="Person1" class="team__img">
+                        <img src="/public/assets/img/Miguel__Avatar.png" alt="Person1" class="team__img">
                         <h3 class="team__name">Miguel Silva</h3>
                         <span class="team__job">Director Ejecutivo</span>
                         <p class="team__about1">Coordinar las diferentes actividades y tareas del proyecto y verificar que se cumplan todos los objetivos.</p>
@@ -218,7 +218,7 @@
                         </div>
                     </div>
                     <div class="team__card">
-                        <img src="/public/assets/img/team2.jpg" alt="Person2" class="team__img">
+                        <img src="/public/assets/img/Felipe__Avatar.png" alt="Person2" class="team__img">
                         <h3 class="team__name">Felipe Castaño</h3>
                         <span class="team__job">Gerente Comercial</span>
                         <p class="team__about">Ejecutar y cordinar los detalles logisticos del proyecto y apoyar a los demas stakeholderse para cumplir con todas las responsabilidades.</p>
@@ -247,7 +247,7 @@
                         </div>
                     </div>
                     <div class="team__card">
-                        <img src="/public/assets/img/team3.jpg" alt="Person3" class="team__img">
+                        <img src="/public/assets/img/Laura__Avatar.png" alt="Person3" class="team__img">
                         <h3 class="team__name">Laura Ortiz</h3>
                         <span class="team__job">Gerente de Marketing</span>
                         <p class="team__about">Ejecutar y coordinar el desarrollo de las campañas de marketing y realizar los proyectos necesarios para la identidad de la empresa.</p>
@@ -276,7 +276,7 @@
                         </div>
                     </div>
                     <div class="team__card">
-                        <img src="/public/assets/img/team3.jpg" alt="Person4" class="team__img">
+                        <img src="/public/assets/img/JuanPablo__Avatar.png" alt="Person4" class="team__img">
                         <h3 class="team__name">Juan Pablo Gaviria</h3>
                         <span class="team__job">Gerente de Comunicaciones</span>
                         <p class="team__about2">Ejecutar y coordinar los detalles logisticos en el desarrollo de la pagina web y asi cumplir con todos los objetivos propuestos.</p>
