Arregle los blogs

--- a/public/index.html
+++ b/public/index.html
@@ -226,13 +226,13 @@
                     <!-- Blog1 -->
                     <div class="blog__item">
                         <div class="blog__img">
-                            <img src="/public/assets/img/no-image.png" alt="Blog-1">
+                            <img src="/public/assets/img/cuidado.png" alt="Blog-1">
                             <span class="bookmark"><i class="ri-bookmark-fill"></i></span>
                         </div>
 
                         <div class="blog__details">
                             <span class="blog__data">1 Enero 2021 | Autor</span>
-                            <a href="#" class="blog__title">Título de el articulo o el blog</a>
+                            <a href="#" class="blog__title">¿Como puedo cuidar una suculenta?</a>
                             <p class="blog__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam fuga minus, nemo alias eum eligendi praesentium fugit. Commodi fugit sint dolorum, quibusdam quod tempore voluptates incidunt, necessitatibus earum qui nisi.</p>
                             <a href="#" class="blog__btn">
                                 Leer más
@@ -243,13 +243,13 @@
                     <!-- Blog2 -->
                     <div class="blog__item">
                         <div class="blog__img">
-                            <img src="/public/assets/img/no-image.png" alt="Blog-2">
+                            <img src="/public/assets/img/entrega.png" alt="Blog-2">
                             <span class="bookmark"><i class="bookmark__icon ri-bookmark-fill"></i></span>
                         </div>
 
                         <div class="blog__details">
                             <span class="blog__data">1 Enero 2021 | Autor</span>
-                            <a href="#" class="blog__title">Título de el articulo o el blog</a>
+                            <a href="#" class="blog__title">¿Como kultinova hace llegar la planta hasta mi casa?</a>
                             <p class="blog__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam fuga minus, nemo alias eum eligendi praesentium fugit. Commodi fugit sint dolorum, quibusdam quod tempore voluptates incidunt, necessitatibus earum qui nisi.</p>
                             <a href="#" class="blog__btn">
                                 Leer más
@@ -260,13 +260,13 @@
                     <!-- Blog3 -->
                     <div class="blog__item">
                         <div class="blog__img">
-                            <img src="/public/assets/img/no-image.png" alt="Blog-3">
+                            <img src="/public/assets/img/cuidado2.png" alt="Blog-3">
                             <span class="bookmark"><i class="bookmark__icon ri-bookmark-fill"></i></span>
                         </div>
 
                         <div class="blog__details">
                             <span class="blog__data">1 Enero 2021 | Autor</span>
-                            <a href="#" class="blog__title">Título de el articulo o el blog</a>
+                            <a href="#" class="blog__title">¿Como puedo cuidar un cactus?</a>
                             <p class="blog__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam fuga minus, nemo alias eum eligendi praesentium fugit. Commodi fugit sint dolorum, quibusdam quod tempore voluptates incidunt, necessitatibus earum qui nisi.</p>
                             <a href="#" class="blog__btn">
                                 Leer más 
