Arreglado el titulo de un blogpost

--- a/public/index.html
+++ b/public/index.html
@@ -249,7 +249,7 @@
 
                         <div class="blog__details">
                             <span class="blog__data">1 Enero 2021 | Autor</span>
-                            <a href="#" class="blog__title">¿Como kultinova hace llegar la planta hasta mi casa?</a>
+                            <a href="#" class="blog__title">¿Como llega la planta hasta mi casa?</a>
                             <p class="blog__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam fuga minus, nemo alias eum eligendi praesentium fugit. Commodi fugit sint dolorum, quibusdam quod tempore voluptates incidunt, necessitatibus earum qui nisi.</p>
                             <a href="#" class="blog__btn">
                                 Leer más
